corrected img links

--- a/src/components/sections/main/main.pug
+++ b/src/components/sections/main/main.pug
@@ -1,10 +1,10 @@
 main.main 
   .slider
-    .slide(style="background-image: url(/wp-content/themes/automovers/assets/img/slide-1.jpg);")
-    .slide(style="background-image: url(/wp-content/themes/automovers/assets/img/slide-2.jpg);")
-    .slide(style="background-image: url(/wp-content/themes/automovers/assets/img/slide-3.jpg);")
-    .slide(style="background-image: url(/wp-content/themes/automovers/assets/img/slide-1.jpg);")
-    .slide(style="background-image: url(/wp-content/themes/automovers/assets/img/slide-2.jpg);")
+    .slide(style="background-image: url(./wp-content/themes/automovers/assets/img/slide-1.jpg);")
+    .slide(style="background-image: url(./wp-content/themes/automovers/assets/img/slide-2.jpg);")
+    .slide(style="background-image: url(./wp-content/themes/automovers/assets/img/slide-3.jpg);")
+    .slide(style="background-image: url(./wp-content/themes/automovers/assets/img/slide-1.jpg);")
+    .slide(style="background-image: url(./wp-content/themes/automovers/assets/img/slide-2.jpg);")
   .main__inner
     h1 Продажа автомобилей из США
     p Широкий ассортимент и регулярные поступления моделей
