--- a/src/components/bem-blocks/socials/socials.pug
+++ b/src/components/bem-blocks/socials/socials.pug
@@ -3,8 +3,8 @@
     li.socials__item
       a(href="#!" target="_blank" rel="external")
         svg(aria-hidden="true")
-          use(xlink:href="/wp-content/themes/automovers/assets/img/icons/sprite.svg#vk")
+          use(xlink:href="./wp-content/themes/automovers/assets/img/icons/sprite.svg#vk")
     li.socials__item
       a(href="#!" target="_blank" rel="external")
         svg(aria-hidden="true")
-          use(xlink:href="/wp-content/themes/automovers/assets/img/icons/sprite.svg#telegram") 
+          use(xlink:href="./wp-content/themes/automovers/assets/img/icons/sprite.svg#telegram") 
