corrected main z-index

--- a/src/components/bem-blocks/logo/logo.pug
+++ b/src/components/bem-blocks/logo/logo.pug
@@ -1,5 +1,5 @@
 a(href="index.html").logo
-  img(src="../wp-content/themes/automovers/assets/img/icons/logo.svg" width="80" height="80" alt="Логотип компании Auto Movers" loading="lazy")
+  img(src="./wp-content/themes/automovers/assets/img/icons/logo.svg" width="80" height="80" alt="Логотип компании Auto Movers" loading="lazy")
   .logo__text
     span Auto Movers
     span Импортируем легенды, создаем впечатления!
