--- a/docs/wp-content/themes/automovers/assets/css/main.css
+++ b/docs/wp-content/themes/automovers/assets/css/main.css
@@ -1129,6 +1129,7 @@ button.swiper-pagination-bullet {
 
 .main {
   position: relative;
+  z-index: 1;
   width: 100%;
   height: 100vh;
   overflow: hidden;
