--- a/src/scss/global/btns.scss
+++ b/src/scss/global/btns.scss
@@ -1,5 +1,5 @@
 .btn {
-  @include RobotoRegular();
+  @include OpenSansRegular();
   font-size: 1.4rem;
   line-height: 130%;
   color: var(--black_1);
