--- a/src/scss/global/mixins.scss
+++ b/src/scss/global/mixins.scss
@@ -2,21 +2,6 @@
 
 /* Roboto */
 
-@mixin RobotoRegular ($font-family: 'Roboto Regular', $font-weight: 400, $font-style: normal, $font-display: swap) {
-    font-family: $font-family;
-    font-weight: $font-weight;
-    font-style: $font-style;
-    font-display: $font-display;
-}
-
-@mixin RobotoMedium ($font-family: 'Roboto Medium', $font-weight: 500, $font-style: normal, $font-display: swap) {
-  font-family: $font-family;
-  font-weight: $font-weight;
-  font-style: $font-style;
-  font-display: $font-display;
-}
-
-
 @mixin RobotoBold ($font-family: 'Roboto Bold', $font-weight: 700, $font-style: normal, $font-display: swap) {
   font-family: $font-family;
   font-weight: $font-weight;
@@ -24,3 +9,23 @@
   font-display: $font-display;
 }
 
+@mixin OpenSansRegular ($font-family: 'Open Sans Regular', $font-weight: normal, $font-style: normal, $font-display: swap) {
+  font-family: $font-family;
+  font-weight: $font-weight;
+  font-style: $font-style;
+  font-display: $font-display;
+}
+
+@mixin OpenSansMedium ($font-family: 'Open Sans Medium', $font-weight: normal, $font-style: normal, $font-display: swap) {
+  font-family: $font-family;
+  font-weight: $font-weight;
+  font-style: $font-style;
+  font-display: $font-display;
+}
+
+@mixin OpenSansBold ($font-family: 'Open Sans Bold', $font-weight: normal, $font-style: normal, $font-display: swap) {
+  font-family: $font-family;
+  font-weight: $font-weight;
+  font-style: $font-style;
+  font-display: $font-display;
+}
