--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,6 +39,9 @@
 @import "./../components/bem-blocks/socials/_socials"; // Соцсети
 @import "./../components/bem-blocks/email/_email";
 @import "./../components/bem-blocks/phone/_phone";
+@import "./../components/bem-blocks/card/_card";
 
 // Секции
 @import "./../components/sections/main/_main"; // Первая секция
+@import "./../components/sections/advantages/_advantages"; // Секция преимущества
+@import "./../components/sections/catalog/_catalog"; // Секция каталог
