--- a/src/components/bem-blocks/nav/_nav.scss
+++ b/src/components/bem-blocks/nav/_nav.scss
@@ -93,7 +93,7 @@
   
       a {
         position: relative;
-        @include RobotoMedium();
+        @include OpenSansMedium();
         font-size: 1.4rem;
         font-weight: 600;
         line-height: 1.2;
@@ -201,35 +201,35 @@
   }
 }
 
-.current-menu-item {
+// .current-menu-item {
 
-  a {
+//   a {
 
-    &::after,
-    &::before {
-      position: absolute;
-      content: "";
-      bottom: -0.5rem;
-      width: 50%;
-      height: 0.2rem;
-      opacity: 1 !important;
-      background-color: var(--green-primary);
-    }
+//     &::after,
+//     &::before {
+//       position: absolute;
+//       content: "";
+//       bottom: -0.5rem;
+//       width: 50%;
+//       height: 0.2rem;
+//       opacity: 1 !important;
+//       background-color: var(--green-primary);
+//     }
   
-    &::after {
-      left: 0 !important;
-    }
+//     &::after {
+//       left: 0 !important;
+//     }
   
-    &::before {
-      right: 0 !important;
-    }
+//     &::before {
+//       right: 0 !important;
+//     }
 
-    &:nth-of-type(1) {
-      color: var(--green-primary);
-    }
-  }
+//     &:nth-of-type(1) {
+//       color: var(--green-primary);
+//     }
+//   }
 
-}
+// }
 
 
 
