--- a/src/components/sections/main/main.pug
+++ b/src/components/sections/main/main.pug
@@ -6,7 +6,7 @@ main.main
     .slide(style="background-image: url(./wp-content/themes/automovers/assets/img/slide-1.jpg);")
     .slide(style="background-image: url(./wp-content/themes/automovers/assets/img/slide-2.jpg);")
   .main__inner
-    h1 Продажа автомобилей из США
+    h1 #[span.yellow Продажа] автомобилей из США
     p Широкий ассортимент и регулярные поступления моделей
     ul
       li Поможем определиться с моделью
