--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,5 +7,8 @@ block content
   .wrap-feedback
   .wrapper
     include ./../components/sections/header/header.pug
-    include ./../components/sections/main/main.pug
+    main
+      include ./../components/sections/main/main.pug
+      include ./../components/sections/advantages/advantages.pug
+      include ./../components/sections/catalog/catalog.pug
     //- include ./../components/sections/footer/footer.pug
