--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -9,7 +9,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto Regular", "Arial", "Tahoma", sans-serif;
+  font-family: "Open Sans Regular", "Arial", "Tahoma", sans-serif;
   font-weight: 400;
   font-style: normal;
   text-rendering: optimizelegibility;
