--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -11,4 +11,6 @@ block content
       include ./../components/sections/main/main.pug
       include ./../components/sections/advantages/advantages.pug
       include ./../components/sections/catalog/catalog.pug
-    //- include ./../components/sections/footer/footer.pug
+      include ./../components/sections/about/about.pug
+      include ./../components/sections/reviews/reviews.pug
+    include ./../components/sections/footer/footer.pug
