--- a/src/components/sections/header/_header.scss
+++ b/src/components/sections/header/_header.scss
@@ -16,20 +16,20 @@
     justify-content: space-between;
     align-items: center;
 
-    &-wrap {
-      // width: 100%;
-      // max-width: 100rem;
-      // display: flex;
-      // flex-direction: column;
-      // align-items: center;
-      // // background: var(--white_1);
+    // &-wrap {
+    //   // width: 100%;
+    //   // max-width: 100rem;
+    //   // display: flex;
+    //   // flex-direction: column;
+    //   // align-items: center;
+    //   // // background: var(--white_1);
   
-      // @media (min-width: 1024px) {
-      //   flex-direction: row;
-      //   justify-content: space-between;
-      //   background: transparent;
-      // }
-    }
+    //   // @media (min-width: 1024px) {
+    //   //   flex-direction: row;
+    //   //   justify-content: space-between;
+    //   //   background: transparent;
+    //   // }
+    // }
   }
 
   &__contacts {
